--- a/projects/topomojo-work/src/app/admin/user-browser/user-browser.component.html
+++ b/projects/topomojo-work/src/app/admin/user-browser/user-browser.component.html
@@ -101,7 +101,7 @@
     <small>{{user.whenCreated | shortdate}}</small>
   </div>
 
-  <div class="col-4 align-self-center text-right">
+  <div class="col-4 align-self-center text-right tm-actions">
     <button class="btn btn-outline-info btn-sm tm-action-btn" (click)="view(user)">
       <fa-icon [icon]="faList"></fa-icon>
       <span>View</span>
